# Aries

./: .gitignore  CMakeLists.txt  ChangeLog.txt
batch/: debug_x86_01_build.bat  debug_x86_02_copy.bat  debug_x86_03_deployqt.bat
doc/: ._reference.txt  reference.txt
src/: ._CMakeLists.txt  CMakeLists.txt  main.cpp
src/ffmpegQT/: QVideoDecoder.cpp  QVideoDecoder.h  QVideoEncoder.cpp  QVideoEncoder.h
src/ffmpegQT341/: QTutorialEighth.cpp  QTutorialEighth.h  QTutorialFifth.cpp  QTutorialFifth.h  QTutorialFirst.cpp  QTutorialFirst.h  QTutorialFourth.cpp  QTutorialFourth.h  QTutorialSecond.cpp  QTutorialSecond.h  QTutorialSeventh.cpp  QTutorialSeventh.h  QTutorialSixth.cpp  QTutorialSixth.h  QTutorialThird.cpp  QTutorialThird.h  QVideoDecoder.cpp  QVideoDecoder.h  ffmpeg.h
src/formFiles/: MainWindow.ui
src/mainUI/: MainWindow.cpp  MainWindow.h
src/misc/: SettingData.cpp  SettingData.h
src/resFiles/: resources.qrc
